[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/tent/food_image.png" type="Texture" id=1]
[ext_resource path="res://UI/tent/gold_image.png" type="Texture" id=2]
[ext_resource path="res://misc/Text_theme.tres" type="Theme" id=3]
[ext_resource path="res://UI/HUD/resourcesOverlay/resourcesOverlay.gd" type="Script" id=4]

[node name="resourcesOverlay" type="Control"]
anchor_right = 1.0
margin_bottom = 76.0
theme = ExtResource( 3 )
script = ExtResource( 4 )

[node name="mainHB" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 255.0

[node name="food" type="HBoxContainer" parent="mainHB"]
margin_right = 382.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="FoodImage" type="TextureRect" parent="mainHB/food"]
margin_right = 382.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="FoodCost" type="Label" parent="mainHB/food/FoodImage"]
margin_left = 166.0
margin_right = 454.0
margin_bottom = 76.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 0, 0.00392157, 1 )
text = "5"
valign = 1

[node name="money" type="HBoxContainer" parent="mainHB"]
margin_left = 386.0
margin_right = 769.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MoneyImage" type="TextureRect" parent="mainHB/money"]
margin_right = 383.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="MoneyCost" type="Label" parent="mainHB/money/MoneyImage"]
margin_left = 164.0
margin_right = 454.0
margin_bottom = 76.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 0.921569, 0.0784314, 1 )
text = "10"
valign = 1

[node name="foodTimer" type="Timer" parent="."]
autostart = true

[node name="moneyTimer" type="Timer" parent="."]
wait_time = 0.717
autostart = true

[connection signal="timeout" from="foodTimer" to="." method="_on_foodTimer_timeout"]
[connection signal="timeout" from="moneyTimer" to="." method="_on_moneyTimer_timeout"]
